--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@
 
 # Hibernate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+##
+# Security Configuration
+##
+
+# OAuth 2
+security.oauth2.client.client-id=ReminderClient
+security.oauth2.client.client-secret=ClientSecret
