JWT OAuth2 Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 ##
 
 # OAuth 2
-security.oauth2.client.client-id=ReminderClient
-security.oauth2.client.client-secret=ClientSecret
+jwt.signing.key=SigningKeyFromProperties
