--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -3,7 +3,19 @@
 ##
 
 # Connection
-spring.datasource.url=jdbc:mysql://localhost/reminder
+spring.datasource.url=jdbc:mysql://localhost/reminder?autoReconnect=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=remiuser
 spring.datasource.password=remipass
+
+# Pool
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=5
+spring.datasource.tomcat.min-idle=5
+spring.datasource.tomcat.initial-size=10
+
+spring.datasource.tomcat.validation-query=select 1;
+spring.datasource.tomcat.test-on-borrow=true
+
+spring.datasource.tomcat.time-between-eviction-runs-millis=60000
+spring.datasource.tomcat.min-evictable-idle-time-millis=300000
