Use property placeholder.

--- a/src/main/resources/application-mysql-qa.properties
+++ b/src/main/resources/application-mysql-qa.properties
@@ -4,9 +4,9 @@
 
 # Connection
 # mysql://b9233a0c5a5e7c:04285e9c@us-cdbr-iron-east-05.cleardb.net/heroku_e49e5109e00154a?reconnect=true
-spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-05.cleardb.net/heroku_e49e5109e00154a?reconnect=true
-spring.datasource.username=b9233a0c5a5e7c
-spring.datasource.password=04285e9c
+spring.datasource.url=${CLEARDB_DATABASE_URL}
+#spring.datasource.username=b9233a0c5a5e7c
+#spring.datasource.password=04285e9c
 
 # Pool
 spring.datasource.tomcat.max-active=5
