Refactored configuration files for environment profiles.

--- a/src/main/resources/application-db-qa.properties
+++ b/src/main/resources/application-db-qa.properties
@@ -2,11 +2,11 @@
 # Data Source Configuration
 ##
 
+# Hibernate
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # Connection
-# mysql://b9233a0c5a5e7c:04285e9c@us-cdbr-iron-east-05.cleardb.net/heroku_e49e5109e00154a?reconnect=true
 spring.datasource.url=${CLEARDB_DATABASE_URL}
-#spring.datasource.username=b9233a0c5a5e7c
-#spring.datasource.password=04285e9c
 
 # Pool
 spring.datasource.tomcat.max-active=5
@@ -14,5 +14,9 @@ spring.datasource.tomcat.max-idle=1
 spring.datasource.tomcat.min-idle=1
 spring.datasource.tomcat.initial-size=5
 
+spring.datasource.tomcat.validation-query=select 1;
+spring.datasource.tomcat.test-on-borrow=true
+
 spring.datasource.tomcat.time-between-eviction-runs-millis=60000
 spring.datasource.tomcat.min-evictable-idle-time-millis=120000
+
