--- a/src/main/resources/application-dm.properties
+++ b/src/main/resources/application-dm.properties
@@ -1,4 +1,11 @@
 ##
 # Profile Configuration
 ##
-spring.profiles.include=hsqldb
+spring.profiles.include=db-dm
+
+##
+# Security Configuration
+##
+
+# OAuth 2
+jwt.signing.key=DMSigningKeyFromProperties
