--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -1,4 +1,11 @@
 ##
 # Profile Configuration
 ##
-spring.profiles.include=mysql,mysql-qa
+spring.profiles.include=db-qa
+
+##
+# Security Configuration
+##
+
+# OAuth 2
+jwt.signing.key=QASigningKeyFromProperties
