--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,11 @@
 ##
 # Profile Configuration
 ##
-spring.profiles.active=mysql
-
-##
-# Data Source Configuration
-##
-
-# Hibernate
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.profiles.active=db-dv
 
 ##
 # Security Configuration
 ##
 
 # OAuth 2
-jwt.signing.key=SigningKeyFromProperties
+jwt.signing.key=DefaultSigningKeyFromProperties
