--- a/src/main/resources/application-db-dv.properties
+++ b/src/main/resources/application-db-dv.properties
@@ -2,6 +2,9 @@
 # Data Source Configuration
 ##
 
+# Hibernate
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # Connection
 spring.datasource.url=jdbc:mysql://localhost/reminder?autoReconnect=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
