WIP Security configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.profiles.active=db-dv
 
 # OAuth 2
 jwt.signing.key=DefaultSigningKeyFromProperties
+
+logging.level.com.example=DEBUG
+logging.level.org.springframework=INFO
